<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_alt_first"
        android:layout_margin="@dimen/text_block_margin"
        android:padding="@dimen/text_block_padding"
        android:text="@string/text_first"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_alt_second"
        android:padding="@dimen/text_block_padding"
        android:layout_margin="@dimen/text_block_margin"
        android:text="@string/text_second"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_left"
            style="@style/Text.First"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_right"
            style="@style/Text.Second"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_rel_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_first"
            android:layout_alignParentTop="true"
            style="@style/Text.First"/>

        <TextView
            android:id="@+id/text_rel_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_second"
            android:layout_below="@+id/text_rel_first"
            style="@style/Text.Second"/>

        <TextView
            android:id="@+id/text_rel_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_left"
            android:layout_below="@+id/text_rel_second"
            style="@style/Text.First"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_right"
            android:layout_below="@+id/text_rel_second"
            android:layout_toRightOf="@+id/text_rel_left"
            style="@style/Text.Second"/>

    </RelativeLayout>

    <include layout="@layout/inc_divider"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_second_activity"/>

    <include layout="@layout/inc_divider"/>

</LinearLayout>